# simple_python_sandbox

./: Dockerfile  client.py  config.py  docker-compose.yml  executor_service.py  main.py  pyproject.toml  seccomp-profile.json
