[project]
name = "safe-code-executor"
version = "1.0.0"
description = "Secure sandboxed Python code executor"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "cloudpickle>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
